--- a/config/locales/layout.pt-BR.yml
+++ b/config/locales/layout.pt-BR.yml
@@ -2,5 +2,6 @@ pt-BR:
   back: Voltar
   create: Criar
   list: Listar %{model}
+  new: Novo %{model}
   project_title: Desafio RD
   search: Buscar
