user can create contacts

--- a/config/locales/activerecord.pt-BR.yml
+++ b/config/locales/activerecord.pt-BR.yml
@@ -20,7 +20,7 @@ pt-BR:
         email: Email
         age: Idade
         state: Estado
-        job: Cargo
+        job: Profissão
       segment:
         name: Nome
 
